tests/fixtures/errors/lock_on_valtype.z
# E0200: .lock on a valtype parameter is meaningless (no identity).
pt: record { x: i64 }
f: function {p: pt.lock} out i64 is {
    return 0
}
main: function is {
    v: pt x: 1
}
